# TrackerApp

./: .gitignore  README.md  TrackerApp.sln
TrackerApp/: BackendController.cpp  BackendController.h  BackendWorker.cpp  BackendWorker.h  CMakeLists.txt  FrameImageProvider.cpp  FrameImageProvider.h  ImageViewer.cpp  ImageViewer.h  JsonTrackerObject.cpp  JsonTrackerObject.h  Tracker.cpp  Tracker.h  TrackerApp.vcxproj  TrackerApp.vcxproj.filters  Trackers.cpp  Trackers.h  WeightedEdgesExtractor.cpp  WeightedEdgesExtractor.h  main.cpp  main.qml
TrackerApp/Scripts/: PlotDrawing.py  PlotReferenceAndDrawDots.py
